Adding logic for zooming into the place that is searched

--- a/Travely.Client/Pages/MapPage.xaml
+++ b/Travely.Client/Pages/MapPage.xaml
@@ -4,15 +4,23 @@
              xmlns:maps="http://schemas.microsoft.com/dotnet/2021/maui/maps"
              x:Class="Travely.Client.Pages.MapPage"
              Title="MapPage">
+    
     <StackLayout>
         <StackLayout Orientation="Horizontal" Padding="10">
             <Entry 
                 x:Name="searchEntry" 
+                Text="{Binding Location}"
                 Placeholder="Search location"
                 Focused="OnSearchEntryFocused"
                 HorizontalOptions="FillAndExpand"/>
-            <ImageButton Source="loop.png" WidthRequest="30" HeightRequest="30" Margin="0,0,10,0"/>
+            <ImageButton 
+                Source="magnifying_glass.png" 
+                Command="{Binding SearchPlaceCommand}"
+                WidthRequest="30" 
+                HeightRequest="30" 
+                Margin="0,0,10,0"/>
         </StackLayout>
+        
         <maps:Map 
             x:Name="map" 
             MapClicked="PinLocationOnMap"/>
