--- a/Travely.Client/Pages/MapPage.xaml
+++ b/Travely.Client/Pages/MapPage.xaml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:resources="clr-namespace:Travely.Client.Resources.UIResources"
              xmlns:maps="http://schemas.microsoft.com/dotnet/2021/maui/maps"
              x:Class="Travely.Client.Pages.MapPage"
-             Title="MapPage">
+             Title="{x:Static resources:PageNameResources.MapPageName}">
     
     <StackLayout>
         <StackLayout Orientation="Horizontal" Padding="10">
