--- a/Travely.Client/Pages/ProfilePage.xaml
+++ b/Travely.Client/Pages/ProfilePage.xaml
@@ -6,10 +6,6 @@
              x:Class="Travely.Client.Pages.ProfilePage"
              xmlns:vm="clr-namespace:Travely.Client.Models"
              Title="{x:Static resources:PageNameResources.ProfilePageName}">
-    
-    <ContentPage.BindingContext>
-        <vm:ProfileViewModel />
-    </ContentPage.BindingContext>
 
     <ScrollView>
         <VerticalStackLayout Padding="30,0">
@@ -46,8 +42,8 @@
                 </VerticalStackLayout>
             </Frame>
 
-            <Label Text="{x:Static resources:ProfileResources.Continents}" Margin="0,20,0,0" FontAttributes="Bold" />
-            <charts:ChartView Chart="{Binding ContinentChart}" HeightRequest="150"/>
+            <Label Text="{x:Static resources:ProfileResources.Countries}" Margin="0,20,0,0" FontAttributes="Bold" />
+            <charts:ChartView Chart="{Binding CountriesChart}" HeightRequest="150"/>
             <Label Text="{x:Static resources:ProfileResources.EuropeanCountries}" Margin="0,50,0,0" FontAttributes="Bold"/>
             <charts:ChartView Chart="{Binding EuropeanCountriesChart}" HeightRequest="150"/>
             <Label Text="{x:Static resources:ProfileResources.TravelFrequency}" Margin="0,50,0,0" FontAttributes="Bold"/>
